# minice-ai-site

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  biome.json  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker-publish.yml
public/: brand-reference.html
scripts/: encrypt-asset.ts  gen-keys.ts  phone-fps.ts
server/: index.ts
server/lib/: rateLimit.ts  sign.ts
server/routes/: asset.ts  token.ts
src/: App.tsx  index.css
src/audio/: AmbientBridge.tsx  ambientEngine.ts
src/components/: ApertureSVG.tsx  AstraFeatureCard.tsx  BootSplash.tsx  Footer.tsx  Nav.tsx  ProgressRail.tsx  ProjectCard.tsx  Stage.tsx  StatusBadge.tsx  StellaModal.tsx  VRMAvatar.tsx  Wordmark.tsx
src/data/: copy.ts  projects.ts  socials.ts
src/hooks/: useAudioCue.ts  useDeviceOrientation.ts  useGPUTier.ts  useI18n.ts  useInnerScroll.ts  useIsMobile.ts  useIsTouch.ts  useMousePosition.ts  useNativeScrollProgress.ts  useReducedMotion.ts  useScrollProgress.ts  useScrollScene.ts
src/lib/: bootSignal.ts  math.ts  protectedAsset.ts  seo.ts  viewport.ts
src/routes/: Home.tsx  NotFound.tsx  Privacy.tsx  Terms.tsx
src/scene/: ApertureRig.tsx  Backdrop.tsx  Blade.tsx  LightBeams.tsx  PostFX.tsx  SceneRoot.tsx  bladeMaps.ts  bladePoseFor.ts  cameraRig.ts
src/scroll/: Lenis.tsx  progressStore.ts  sections.ts
src/sections/: About.tsx  Contact.tsx  Hero.tsx  Projects.tsx
wasm/: Cargo.toml  build.rs  build.sh
wasm/src/: lib.rs
